update offering structure and tests